--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@types/glob": "^8.1.0",
     "better-sqlite3": "^11.8.1",
+    "commander": "^14.0.3",
     "diff": "^7.0.0",
     "glob": "^13.0.3"
   },
