add missing .env and .kodrdriv* patterns to .gitignore
Required by kodrdriv publish prechecks.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ node_modules/
 # Build output
 dist/
 
+# Environment variables
+.env
+
+# kodrdriv internal files
+.kodrdriv*
+
 # Coverage
 coverage/
 
