--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 24
+      - name: Install native build tools
+        run: sudo apt-get update && sudo apt-get install -y build-essential python3
       - name: Install dependencies
         run: |
           # Use public npm registry (package-lock.json is gitignored)
